<resources>
    <string name="app_name">ToDo App </string>
    <string name="list">List</string>
    <string name="settings">Settings</string>
    <string name="todo_list">Todo List</string>
    <string name="add_new_task">Add new Task</string>
    <string name="enter_task_title">Enter task title </string>
    <string name="enter_task_desc">Enter task description </string>
    <string name="add_task">Add Task</string>
    <string name="select_task_date">Select Task Date </string>
    <string name="required">Required</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_task">Edit Task</string>
    <string name="taskTitle">"Task Title  "</string>
    <string name="taskDetails">Task Details</string>
    <string name="save_changes">Save Changes</string>
    <string name="language">Language</string>
    <string name="mode">Mode</string>
    <string name="time">Selected Time</string>
    <string name="selected_date">Selected Date</string>
    <string name="isdone">isDone!</string>
    <string name="delete_item">delete item</string>
    <string name="todo">TODO</string>
</resources>