<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/_5sdp"
    tools:context=".AddAndEdit.EditTaskFragment">

    <View
        android:id="@+id/viewEditTV"
       android:background="@color/blue"
        android:backgroundTint="@color/blue"
        android:backgroundTintMode="src_atop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
       />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        style="@style/EditTask"


        >


                <TextView
                    android:id="@+id/EditTV"
                    style="@style/DayTextColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/edit_task"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
android:layout_marginVertical="@dimen/_5sdp"
                    app:layout_constraintBottom_toTopOf="@id/taskTitle"

                    />



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/taskTitle"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/ic_error"
            android:layout_width="match_parent"
             app:layout_constraintTop_toBottomOf="@id/EditTV"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/taskDetails"
            android:layout_marginVertical="@dimen/_5sdp"

            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/taskTitle"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/taskDetails"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/ic_error"
            android:layout_width="match_parent"
             app:layout_constraintTop_toBottomOf="@id/taskTitle"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_5sdp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/taskDetails"

                />
        </com.google.android.material.textfield.TextInputLayout>


        <CheckBox
            android:id="@+id/isDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/isdone"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintBottom_toTopOf="@id/save_change_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.062"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextDateTV"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/editTextDateTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected_date"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintBottom_toTopOf="@id/isDone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/taskDetails"
            tools:text="@string/select_task_date" />

        <TextView
            android:id="@+id/editTextDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintBottom_toBottomOf="@id/editTextDateTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/editTextDateTV"
            app:layout_constraintTop_toTopOf="@id/editTextDateTV"
            tools:text="@string/select_task_date" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_change_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/save_changes"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/isDone" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>